[workspace]
members = [
    "my_service",
    "e2e_tests",
]

[package]
name = "e2e_tests"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
kurtosis = "0.1"

[dev-dependencies]
# Dependencies for testing